--- a/build.gradle
+++ b/build.gradle
@@ -26,6 +26,7 @@ tasks.withType(JavaCompile) {
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+    implementation 'org.springframework.boot:spring-boot-starter-aop'
 
     developmentOnly 'org.springframework.boot:spring-boot-devtools'
 
