--- a/src/main/resources/application-local.properties
+++ b/src/main/resources/application-local.properties
@@ -13,3 +13,10 @@ server.ssl.enabled=true
 server.ssl.key-store-type=PKCS12
 server.ssl.key-store=classpath:ssl/webapp_ssl.p12
 server.ssl.key-store-password=password
+
+# логи
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+logging.level.org.hibernate.type.descriptor.sql=trace
+#logging.level.org.springframework=trace
+#logging.pattern.console=%C{1.} [%-5level] %d{HH:mm:ss} - %msg%n
