--- a/src/main/resources/application-local.properties
+++ b/src/main/resources/application-local.properties
@@ -20,3 +20,7 @@ spring.jpa.properties.hibernate.format_sql=true
 logging.level.org.hibernate.type.descriptor.sql=trace
 #logging.level.org.springframework=trace
 #logging.pattern.console=%C{1.} [%-5level] %d{HH:mm:ss} - %msg%n
+# для отладки работы кеша
+logging.level.org.ehcache=trace
+org.springframework.cache=trace
+#logging.pattern.console=%C{1.} [%-5level] %d{HH:mm:ss} - %msg%n
